# Comfyui_turbodiffusion

./: .gitignore  CHANGES.md  CUSTOM_LOADER.md  DOWNLOAD_MODELS.md  IMPLEMENTATION_COMPLETE.md  IMPORT_FIX.md  INSTALLATION.md  MODEL_LOCATIONS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README.old.md  READY_TO_USE.md  SETUP_STATUS.md  STATUS.md  V2_REDESIGN.md  __init__.py  comfyui_model_integration.py  config.py  pyproject.toml  test_installation.py  test_load.py  turbowan_workflow.json  verify_models.py
.claude/: settings.local.json
nodes/: __init__.py  i2v_generator.py  model_loader.py  turbowan_inference.py  turbowan_model_loader.py  turbowan_sampler.py  vae_loader.py
utils/: cpu_offload_wrapper.py  lazy_loader.py  model_management.py
